--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 # Database Connection
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/employeemanager
+spring.datasource.url=jdbc:postgresql://localhost:5432/userdb
 spring.datasource.username=postgres
 spring.datasource.password=groot
 
